fix alignment

--- a/assets/css/pages/usermanagement.scss
+++ b/assets/css/pages/usermanagement.scss
@@ -37,10 +37,6 @@ section {
     padding-bottom: 0;
 }
 
-.quote {
-	text-align: center;
-}
-
 .row {
     padding-top: 60px;
 }
